--- a/style.css
+++ b/style.css
@@ -1,13 +1,423 @@
-/*
-Theme Name: McLuhan Child
-Theme URI: https://www.andersnoren.se/teman/mcluhan-wordpress-theme/
-Template: mcluhan
-Author: Anders Norén
-Author URI: https://www.andersnoren.se
-Description: McLuhan is a clean, simple and lightweight WordPress theme, featuring a front page with a complete post archive arranged by year rather than a traditional blog flow. It also sports fully customizable background colors for the sidebar and content, Block Editor/Gutenberg support, a responsive design, social network links with icons, an AJAX-powered mobile search with instant results, a resume page template and a full-width template. Demo: https://www.andersnoren.se/themes/mcluhan/
-Tags: two-columns,left-sidebar,custom-menu,custom-colors,editor-style,featured-images,full-width-template,sticky-post,threaded-comments,theme-options,blog,translation-ready,block-styles,wide-blocks
-Version: 1.20.1584295496
-Updated: 2020-03-15 19:04:56
+/**
+	Theme Name: McLuhan Child
+	Theme URI: https://www.andersnoren.se/teman/mcluhan-wordpress-theme/
+	Template: mcluhan
+	Author: Anders Norén
+	Author URI: https://www.andersnoren.se
+	Description: McLuhan is a clean, simple and lightweight WordPress theme, featuring a front page with a complete post archive arranged by year rather than a traditional blog flow. It also sports fully customizable background colors for the sidebar and content, Block Editor/Gutenberg support, a responsive design, social network links with icons, an AJAX-powered mobile search with instant results, a resume page template and a full-width template. Demo: https://www.andersnoren.se/themes/mcluhan/
+	Tags: two-columns,left-sidebar,custom-menu,custom-colors,editor-style,featured-images,full-width-template,sticky-post,threaded-comments,theme-options,blog,translation-ready,block-styles,wide-blocks
+	Version: 1.20.1584295496
+	Updated: 2020-03-15 19:04:56
 
-*/
+	blau: #1065A5;
+**/
 
+.clearer {
+	clear: both;
+}
+
+.masonry { /* Masonry container */
+  margin: 1.5em auto;
+  max-width: 1200px;
+  column-gap: 1.5em;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+/** MATERIAL **/
+
+.post button, 
+.entry-content .wp-block-file__button{
+	background:#1065A5;
+}
+.post button:hover, 
+.entry-content .wp-block-file__button:hover{
+	background:#e14646;
+}
+
+.section-inner {
+	max-width: 1200px;
+	width:100%;
+}
+
+
+/** MATERIAL-LISTE **/
+
+.material-counter {
+  width: 220px;
+  float: left;
+}
+
+.facetwp-counts {
+  display: inline;
+}
+.material-pager {
+width: auto;
+float: right;
+}
+
+.material-selection {
+	margin-bottom: 10px;
+}
+
+a > h2 > span {
+	font-size: 1.3em;
+}
+
+.post-preview {
+	padding-top: 60px;
+}
+
+.material-excerpt {
+	margin-top: 1em;
+	margin-bottom: 1em;
+	background-color: #eee;
+	line-height: 1.5em;
+}
+h2.title {
+    margin: 5px 0 0 4px;
+}
+
+
+.material-picture {
+	float: left;
+	margin-right:0.5em;
+	margin-bottom: 1em;
+	background-color: #eee;
+	width: 100%;
+	max-height: 200px;
+	overflow:hidden;
+}
+
+.material-aufgabe {
+	float: left;
+	width: 100%;
+	overflow: hidden;
+	margin-bottom: 1em;
+	font-size: .9em;
+	background-color:moccasin;
+	padding:5px
+	
+}
+
+.terms{
+	display:inline-block;
+	margin: 2px 0px 0 2px;
+}
+
+.material-entry {
+	margin: 0.5em;
+	padding: 0.5em;
+	border: 1px solid #999;
+	border: 0px solid #1065A5;
+  background-color: #1065A5;
+	display: inline-block;
+  margin: 0 0 1em;
+  width: 100%;
+}
+.material-entry h2.title{
+	
+	color:white;
+}
+.material-thema-entry{
+	font-size:0.75em;
+	padding: 5px 10px;
+  background-color: darkorange;
+  border-radius: 5px;
+}
+.material-thema-entry a,
+.material-klassenstufe-entry a,
+.material-autoren-entry a{
+	color:white;
+	white-space:nowrap; 
+}
+.material-autoren-entry{
+	font-size:0.75em;
+	padding: 5px 10px;
+	background-color: #666;
+	border-radius: 5px;
+}
+
+.material-klassenstufe-entry{
+	font-size:0.75em;
+	padding: 5px 10px;
+  background-color: #1065A5;
+  border-radius: 5px;
+	
+}
+.material-meta {
+	width:95%;
+}
+
+ 
+
+/* Masonry on medium-sized screens */
+@media only screen and  (min-width: 1280px) {
+  .masonry {
+    column-count: 3;
+  }
+	.facetts{
+		 columns:2;
+	}
+}
+
+/* Masonry on small screens */
+@media only screen and (max-width: 1280px) and (min-width: 800px) {
+  .masonry {
+    column-count: 2;
+  }
+	.facetts{
+		 columns:2;
+	}
+}
+
+.facetwp-checkbox {
+	padding: 5px 0px 5px 50px;
+  background: orange!important;
+	border-radius:5px;
+	
+}
+.facet-thema{
+	max-width:500px;
+}
+.facetwp-checkbox.checked {
+
+    background-image: unset;
+    border: 7px solid darkorange;
+    border-radius: 5px;
+
+}
+.facetwp-checkbox.checked span{
+	float:right;
+	visibility:hidden;
+}
+.facetwp-checkbox.checked::before{
+	content:' ( x )   ';
+}
+
+.material-icons  {
+	padding-left: 5px;
+	padding-top: 10px;
+}
+
+/***** DIGITALE WERKZEUG-LISTE ********/
+.werkzeug-entry {
+	margin: 0.5em;
+	padding: 0.5em;
+	border: 1px solid #999;
+	border: 0px solid #1065A5;
+	background-color: moccasin;
+	display: inline-block;
+	margin: 0 0 1em;
+	width: 100%;
+}
+.werkzeug-entry button  {
+	background: #1065A5;
+	border-radius:50%;
+	padding:0;
+	margin:-8px -10px 0 0;
+	float:right;
+	padding:0 9px 5px 9px ;
+	
+}
+.werkzeug-entry button  a{
+	font-size:48px;
+	color:white;
+	margin:0;
+	text-decoration:none;
+}
+.werkzeug-entry button:hover  {
+	background: darkred;
+	text-decoration:none;
+}
+
+.werkzeug-entry .title{
+	background:rgba(255, 162, 2, 0.2);
+	padding:10px 5px;
+	margin:0 -2px;	
+}
+
+.werkzeug-picture {
+	max-height:150px; 
+	overflow: hidden;
+	width: 100%;
+}
+.werkzeug-picture img{
+	width: 100%;
+	margin-top:-10%;
+}
+
+.werkzeug-beschreibung{
+	padding:10px 5px;
+	background:#fefefe;
+}
+/***** DIGITALE WERKZEUGE ********/
+
+
+.meta.meta-werkzeug{
+	color: #000;
+	padding: 10px;
+	background-color: moccasin;
+	
+}
+
+
+.wz_gruen {
+	//color: #0f0;
+	color: #000;
+	font-size: 1.4em;
+}
+
+.wz_rot {
+	//color: #f00;
+	color: #999;
+	font-size: 1.4em;
+}
+.werkzeug-timestamp{
+	float:left;
+	
+}
+.werkzeug-timestamp a{
+	color: #c0c0c0;
+	font-style:italic;
+}
+
+.single-digitale_werkzeuge .werkzeug-detail {
+	background-color: #1065A5;
+	color: #fff;
+	margin-top: 0em;
+	border-radius:5px;
+	float:right;
+	
+}
+button.werkzeug-detail a{
+	color: #fff;
+}
+
+.werkzeug-detail:hover{
+	background-color: #e14646;
+	border-radius:5px;
+}
+
+.procontra {
+	padding-top:10px;
+}
+.pro {
+	padding: 8px;
+}
+.pro ul li:before {
+	content: "+";
+	padding : 0 5px 2px 5px;
+	background: #0f0;
+	margin-right: 10px;
+	border-radius: 50%;
+	color:#000;
+	font-weight:bold;
+}
+.pro ul li {
+	line-height:2em;
+}
+.contra {
+	padding: 8px;
+}
+.contra ul li {
+	line-height:2em;
+}
+.contra ul li:before {
+	content: "-";
+	padding : 0 6px 2px 7px;
+	background: #f00;
+	margin-right: 10px;
+	border-radius: 50%;
+	color:#fff;
+	font-weight:bold;
+}
+
+.werkzeug-terms{
+	background:rgba(255, 162, 2, 0.2);
+	padding: 5px;
+	margin: 20px;
+}
+
+/** AUSGABEliste Netzwerke **/
+
+.netzwerk-entry {
+	padding-top: 20px;
+}
+
+.netzwerk-entry H2 {
+	padding-bottom: 10px;
+}
+.netzwerk_details  {
+	padding-top: 10px;
+}
+.netzwerk_details summary {
+	padding-bottom: 10px;
+}
+
+.netzwerk_contact {
+	padding-top: 10px;
+}
+
+.netzwerk_icon {
+	padding-top: 2px;
+	margin-right: 5px;
+	margin-left: -3px;
+}
+
+/* DETAIL SUMMARY */
+
+summary:before {
+  content: "+"; 
+  margin-right: 5px;
+	font-weight:bold;
+	color: #1065a5;
+	padding: 0 5px;
+	border-radius:55%;
+	
+}
+details[open]  summary:before {
+  content: "-"; 
+  margin-right: 10px;
+	font-weight:bold;
+	color: green;
+	background-color:#fff;
+	padding: 0 7px;
+}
+
+details summary { list-style-type: none; } /* Firefox */
+details summary::-webkit-details-marker { display: none; } /* Chrome */
+details summary::marker { display: none; }
+
+details{
+	padding: 1em;
+	transition: all 1s ease;
+	overflow: hidden;
+	border-radius:10px;
+}
+details[open] {
+  background: #eee;
+}
+summary:focus{
+    outline: none;
+}
+
+details:not([open])
+{
+  height: 1.8em;
+	background: #fff;
+}
+
+summary {
+  cursor:pointer;	
+}
+
+/**************************************/
